--- a/zadanie-47400/index.html
+++ b/zadanie-47400/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Responsive galery</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
